--- a/css/app/base-style.css
+++ b/css/app/base-style.css
@@ -7,11 +7,49 @@
     line-height: 2.5;
     margin-right: 5px;
 }
-
+/* Tab */
 #tabs {
     min-height: 600px;
 }
 
 .ui-tabs .ui-tabs-panel {
     padding: 10px 0 0 0;
+    width: 100%;
+    min-height: 600px;
+}
+
+/* Paginator*/
+.footer .pagination {
+    float: right;
+    margin: 6px 20px 0 0;
+}
+.footer .item-per-page {
+    height: 35px;
+    width: 60px;
+    margin: 6px 0 0 20px;
+}
+
+/* Loader */
+.div-mask {
+    background-color : #BBBBBB;
+    opacity          : 0.6;
+    filter           : alpha(opacity=60);
+    text-align       : center;
+}
+.vertical-aligner {
+    display        : inline-block;
+    height         : 100%;
+    vertical-align : middle;
+}
+.loader {
+    display          : inline-block;
+    height           : 31px;
+    vertical-align   : middle;
+    width            : 31px;
+    background-image : url(../../resources/images/loader.gif);
+}
+
+/* edit popup*/
+.edit-popup-container {
+    min-height: 100px;
 }
