--- a/css/app/base-style.css
+++ b/css/app/base-style.css
@@ -48,7 +48,21 @@
     width            : 31px;
     background-image : url(../../resources/images/loader.gif);
 }
-
+.loading {
+    background-image: url(../../resources/images/loader.gif);
+    background-repeat:no-repeat;
+    background-color: #BBBBBB;
+    opacity: 0.6;
+    background-attachment:fixed;
+    background-position:center;
+    position: absolute;
+    filter: alpha(opacity=60);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+}
 /* edit popup*/
 .edit-popup-container {
     min-height: 100px;
@@ -57,6 +71,7 @@
 /* Tow side selection*/
 .two-column .column{
     width: 50%;
+    min-height: 100px;
     display: inline-block;
     vertical-align: top;
 }
